--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -17,13 +17,20 @@ body{
   /* background-color: aqua; */
   overflow-x: hidden;
 }
-
 .logo-melli{
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
   margin-top: 30px;
+  width: 45px;
+  height: 30px;
+  flex-shrink: 0;
+}
+.logo-melli img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .image-row {
@@ -111,6 +118,9 @@ body{
 
 .button-online:hover{
   background-color: rgb(141, 32, 32);
+}
+.hero-right{
+  display: none;
 }
 .content-country{
   font-family: 'vazirmatn';
@@ -251,4 +261,120 @@ body{
   color: rgba(55, 6, 6, 0.65);
   border: 2px solid rgba(27, 23, 23, 0.65);
   transition: all 300ms;
+}
+@media (min-width: 501px){
+  .logo-melli{
+    width: 90px;
+    height: 45px;
+  }
+  
+  .container{
+    width: 1140px;
+    /* background-color: rgb(255, 0, 17) ; */
+    max-width: none;
+  }
+  .hero{
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .hero-left{
+    padding-right: 90px;
+    padding-top: 50px;
+  }
+  .hero-right{
+    display: block;
+  }
+  .content{
+    font-family: 'lalezar';
+    font-size: 64px;
+    font-weight: 400;
+    color: rgba(27, 23, 23, 1);
+  }
+  .content-inf{
+    font-family: 'vazirmatn';
+    font-weight: 400;
+    font-size: 14px;
+    color: rgba(27, 23, 23, 0.65);
+    max-width: 450px;
+  }
+
+  .hero-button{
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 15px;
+    padding-left: 270px;
+  }  
+  .button-call, .button-online{
+    padding: 5px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    margin: 0; 
+    }
+  
+  .button-online img {
+    width: 16px;
+    height: 16px;
+    margin: 0;
+    display: inline-block;
+  }
+  .list-country{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 50px;
+  }
+  .content-country{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+  }
+  .horizontal-list {
+    display: flex;
+    justify-content: center;  
+    align-items: center;
+  }
+  .horizontal-list li {
+    margin-left: 20px;
+    margin-right: 20px; 
+  }
+  .offers{
+    margin-top: 120px;
+  }
+  .offers-info{
+    max-width: 465.18px;
+  }
+  .special-offer{
+    font-size: 48px;
+    font-weight: 400;
+  }
+  .list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 13px; 
+    padding: 0;
+    margin: 0;
+  }
+
+  .list li {
+    width: calc(25% - 10px); 
+    height: 250px;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    text-align: center;
+    margin-bottom: 40px; 
+  }
+
+  .list li img {
+    width: 100%; 
+    height: auto; 
+    margin-bottom: 8px;
+  }
 }
