--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,13 +1,18 @@
+:root{
+  --width: 100%;
+  --hieght: 100%;
+  --weight: 400;
+  --size: 14px
+}
 *{
   box-sizing: border-box;
 }
 
 body{
-  width: 100%;
+  width: var(--width);
   margin: 0;
   height: 2293px;
   background-color: rgba(238, 235, 221, 1);
-  
 }
 
 .container{
@@ -17,19 +22,20 @@ body{
   /* background-color: aqua; */
   overflow-x: hidden;
 }
+
 .logo-melli{
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
   margin-top: 30px;
-  width: 45px;
   height: 30px;
   flex-shrink: 0;
 }
+
 .logo-melli img {
-  width: 100%;
-  height: 100%;
+  width: var(--width);
+  height: var(--hieght);
   object-fit: contain;
 }
 
@@ -49,15 +55,15 @@ body{
 
 .customer{
   font-family: 'vazirmztn';
-  font-weight: 400;
-  font-size: 14;
+  font-weight: var(--weight);
+  font-size: var(--size);
   color: rgba(27, 23, 23, 0.65);
 }
 
 .customer-num{
   font-family: 'vazirmatn';
   font-weight: 700;
-  font-size: 14px;
+  font-size: var(--size);
   margin-right: 20px;
   color: black;
 }
@@ -65,15 +71,15 @@ body{
 .content{
   font-family: 'lalezar';
   font-size: 48px;
-  font-weight: 400;
+  font-weight:var(--weight);
   line-height: 48px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 .content-inf{
   font-family: 'vazirmatn';
-  font-size: 14px;
-  font-weight: 400;
+  font-size: var(--size);
+  font-weight: var(--weight);
   color: rgba(27, 23, 23, 0.65);
 }
 
@@ -82,8 +88,8 @@ body{
   color:rgba(27, 23, 23, 0.65);
   background-color: rgba(238, 235, 221, 1);
   font-family: 'vazirmatn';
-  font-weight: 400;
-  font-size: 14px;
+  font-weight: var(--weight);
+  font-size: var(--size);
   border: solid rgba(27, 23, 23, 0.65);
   padding: 7px 30px;
   display: flex;
@@ -107,8 +113,8 @@ body{
   background-color: rgba(206, 18, 18, 1);
   color: rgba(238, 235, 221, 1);
   font-family: 'vazirmatn';
-  font-weight: 400;
-  font-size: 14px;
+  font-weight: var(--width);
+  font-size: var(--size);
   gap: 12px;
   padding: 5px 20px;
   margin: 20px auto;
@@ -119,9 +125,11 @@ body{
 .button-online:hover{
   background-color: rgb(141, 32, 32);
 }
+
 .hero-right{
   display: none;
 }
+
 .content-country{
   font-family: 'vazirmatn';
   font-size: 16px;
@@ -129,22 +137,24 @@ body{
   color: rgba(27, 23, 23, 1);
  padding-top: 40px;
 }
+
  .horizontal-list{
-  width: 100%;
+  width: var(--width);
  display: flex;
  align-items: center;
  justify-content: space-between;
  list-style: none;
  padding: 0;
  margin: 0;
-
  }
+
  .horizontal-list li{
   margin-right: 0px;
   flex-shrink: 0;
   text-align: center;
   width: 70px;
  }
+
  .image-hover {
   position: relative;
   margin: 20px;
@@ -157,8 +167,8 @@ body{
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: var(--width);
+  height: var(--hieght);
   object-fit: cover;
   transition: opacity 0.3s ;
   border-radius: 12px;
@@ -178,26 +188,27 @@ body{
 
  .horizontal-list li:not(:first-child){
   margin-left: 20px;
- }
+}
 
  .font-country{
   font-family: "vazirmatn";
-  font-size: 14px;
+  font-size: var(--size);
   font-weight: 500;
   color: rgba(27, 23, 23, 0.65);
  }
+
 .special-offer{
   font-family: 'lalezar';
   font-size: 36px;
-  font-weight: 400;
+  font-weight: var(--weight);
   color: rgba(27, 23, 23, 1);
   margin-bottom: 15px;
 }
 
 .content-offer{
   font-family: 'vazirmatn';
-  font-size: 14px;
-  font-weight: 400;
+  font-size: var(--size);
+  font-weight: var(--weight);
   color: rgba(27, 23, 23, 0.65);
 }
 
@@ -236,8 +247,8 @@ body{
 
 .list-type {
   font-family: 'vazirmatn';
-  font-size: 14px;
-  font-weight: 400;
+  font-size: var(--size);
+  font-weight: var(--weight);
   color: rgba(27, 23, 23, 0.65);
   margin: 4px 0;
 }
@@ -249,7 +260,7 @@ body{
   border-radius: 36px;
   background-color: rgba(238, 235, 221, 1);
   font-family: 'vazirmatn';
-  font-size: 14px;
+  font-size: var(--size);
   font-weight: 400;
   color: rgba(27, 23, 23, 0.65);
   border: solid 1px rgba(27, 23, 23, 0.65);
@@ -257,43 +268,70 @@ body{
   margin-top: 110px;
   padding: 10px 25px;
 }
+
 .products:hover {
   color: rgba(55, 6, 6, 0.65);
   border: 2px solid rgba(27, 23, 23, 0.65);
   transition: all 300ms;
 }
+
 @media (min-width: 501px){
   .logo-melli{
-    width: 90px;
-    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: 30px;
+    width: 100px;
+    height: 55px;
+    flex-shrink: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+  .logo-melli img {
+    width: var(--width);
+    height: var(--hieght);
+    object-fit: contain;
+    margin-top: 80px;
   }
-  
+
   .container{
     width: 1140px;
     /* background-color: rgb(255, 0, 17) ; */
     max-width: none;
   }
+
   .hero{
     display: flex;
     flex-direction: row-reverse;
   }
+
   .hero-left{
-    padding-right: 90px;
-    padding-top: 50px;
+    padding-right: 70px;
+    padding-top: 90px;
   }
+
   .hero-right{
     display: block;
+    margin-top: 60px;
+    filter:drop-shadow(0px 15px 10px rgba(0, 0, 0, 0.4));
+    border-radius: 40px;
   }
+ 
   .content{
     font-family: 'lalezar';
     font-size: 64px;
-    font-weight: 400;
+    font-weight: var(--weight);
     color: rgba(27, 23, 23, 1);
+    margin-top: 20px;
+    line-height: 64px;
   }
+
   .content-inf{
     font-family: 'vazirmatn';
-    font-weight: 400;
-    font-size: 14px;
+    font-weight:var(--weight);
+    font-size: var(--size);
     color: rgba(27, 23, 23, 0.65);
     max-width: 450px;
   }
@@ -302,8 +340,9 @@ body{
     display: flex;
     flex-direction: row-reverse;
     gap: 15px;
-    padding-left: 270px;
+    padding-left: 250px;
   }  
+
   .button-call, .button-online{
     padding: 5px 10px;
     display: flex;
@@ -311,6 +350,8 @@ body{
     justify-content: center;
     gap: 12px;
     margin: 0; 
+    padding-right: 20px;
+    padding-left: 20px;
     }
   
   .button-online img {
@@ -319,39 +360,47 @@ body{
     margin: 0;
     display: inline-block;
   }
+
   .list-country{
-    width: 100%;
+    width: var(--width);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 50px;
+    margin-top: 60px;
   }
+
   .content-country{
     display: flex;
     justify-content: center;
     text-align: center;
     align-items: center;
   }
+
   .horizontal-list {
     display: flex;
     justify-content: center;  
     align-items: center;
   }
+  
   .horizontal-list li {
     margin-left: 20px;
     margin-right: 20px; 
   }
+
   .offers{
     margin-top: 120px;
   }
+
   .offers-info{
     max-width: 465.18px;
   }
+
   .special-offer{
     font-size: 48px;
     font-weight: 400;
   }
+
   .list {
     display: flex;
     flex-wrap: wrap;
@@ -373,8 +422,8 @@ body{
   }
 
   .list li img {
-    width: 100%; 
-    height: auto; 
+    width: var(--width); 
+    height:var(--hieght); 
     margin-bottom: 8px;
   }
 }
