--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -43,6 +43,26 @@ body{
   display: flex;
   align-items: start;  
   margin-top: 50px;
+  list-style: none;
+  width: auto;
+  flex-shrink: 0;
+  flex-direction: row-reverse;
+}
+
+.image-row li:nth-child(1) {
+  z-index: 1;
+}
+
+.image-row li:nth-child(2) {
+  z-index: 2;
+}
+
+.image-row li:nth-child(3) {
+  z-index: 3;
+}
+
+.image-row li:nth-child(4) {
+  z-index: 4;
 }
 
 .image-row img {
@@ -53,11 +73,19 @@ body{
   margin-left: -8px;
 }
 
+.left-row{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: -35px;
+}
+
 .customer{
   font-family: 'vazirmztn';
   font-weight: var(--weight);
   font-size: var(--size);
   color: rgba(27, 23, 23, 0.65);
+  margin-top: 35px;
 }
 
 .customer-num{
@@ -76,6 +104,7 @@ body{
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
 .content-inf{
   font-family: 'vazirmatn';
   font-size: var(--size);
@@ -119,7 +148,6 @@ body{
   padding: 5px 20px;
   margin: 20px auto;
   border: 1px solid rgba(206, 18, 18, 1);
-  
 }
 
 .button-online:hover{
