--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -163,17 +163,17 @@ body{
   font-size: 16px;
   font-weight: 500;
   color: rgba(27, 23, 23, 1);
- padding-top: 40px;
+  padding-top: 40px;
 }
 
  .horizontal-list{
   width: var(--width);
- display: flex;
- align-items: center;
- justify-content: space-between;
- list-style: none;
- padding: 0;
- margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  margin: 0;
  }
 
  .horizontal-list li{
@@ -338,13 +338,19 @@ body{
   .hero-left{
     padding-right: 70px;
     padding-top: 90px;
+    
   }
 
   .hero-right{
     display: block;
     margin-top: 60px;
-    filter:drop-shadow(0px 15px 10px rgba(0, 0, 0, 0.4));
-    border-radius: 40px;
+    /* box-shadow: 0 15px 10px black; */
+    /* filter:drop-shadow(0px 15px 10px rgba(0, 0, 0, 1)); */
+    /* border-radius: 40px; */
+    padding: 10px;
+  }
+  .hero-right img{
+    filter:drop-shadow(0px 15px 10px rgba(0, 0, 0, 1));
   }
  
   .content{
